CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(Runeflyff)

# Find includes in corresponding build directories
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

# Include local modules
LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake-modules")

message("cmake_module_path = ${CMAKE_MODULE_PATH}")

# Instruct CMake to run moc automatically when needed.
SET(CMAKE_AUTOMOC ON)

# Check for C++11/C++0x compatibility. This is required.

INCLUDE(CheckCXXCompilerFlag)

SET(MS_CXX14 "/std:c++14")
SET(MS_CXX17 "/std:c++17")

IF (MSVC)
    CHECK_CXX_COMPILER_FLAG(${MS_CXX14} MSVC_SUPPORTS_CXX14)
    CHECK_CXX_COMPILER_FLAG(${MS_CXX17} MSVC_SUPPORTS_CXX17)
    SET(MSVC_SUPPORTS_CXX11 MSVC_VERSION > 1500)

    IF (MSVC_SUPPORTS_CXX17)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MS_CXX17}")
    ELSEIF (MSVC_SUPPORTS_CXX14)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MS_CXX14}")
    ELSEIF (MSVC_SUPPORTS_CXX11)
        MESSAGE(WARN "The compiler ${CMAKE_CXX_COMPILER} has limited C++11 support. Use Visual Studio 2017 or later for best results.")
    ELSE()
        MESSAGE(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
    ENDIF()
ENDIF()

# GCC and LLVM support the same command line arguments

SET(GNU_COMPAT_COMPILER TRUE)

SET(GNU_CXX0X "-std=c++0x")
SET(GNU_CXX11 "-std=c++11")
SET(GNU_CXX14 "-std=c++14")
SET(GNU_CXX17 "-std=c++17")

CHECK_CXX_COMPILER_FLAG(${GNU_CXX0X} GNU_SUPPORTS_CXX0X)
CHECK_CXX_COMPILER_FLAG(${GNU_CXX11} GNU_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG(${GNU_CXX14} GNU_SUPPORTS_CXX14)
CHECK_CXX_COMPILER_FLAG(${GNU_CXX17} GNU_SUPPORTS_CXX17)

IF (GNU_SUPPORTS_CXX17)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GNU_CXX17}")
ELSEIF (GNU_SUPPORTS_CXX14)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GNU_CXX14}")
ELSEIF (GNU_SUPPORTS_CXX11)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GNU_CXX11}")
ELSEIF (GNU_SUPPORTS_CXX0X)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GNU_CXX0X}")
ELSE()
    MESSAGE(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
ENDIF()

if( MINGW )
    get_filename_component( Mingw_Path ${CMAKE_CXX_COMPILER} PATH )
    set( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS ${Mingw_Path}/libgcc_s_dw2-1.dll ${Mingw_Path}/libstdc++-6.dll )
endif( MINGW )

SET(QT5_VERSION 5.10)

# Override this at the command line with your path
SET(Qt5_DIR "E:/CppLibs/QT/5.13.2/5.13.2/mingw73_32/lib/cmake/Qt5")

# QT 5.x dependencies
FIND_PACKAGE(Qt5 ${QT5_VERSION} REQUIRED COMPONENTS
        Core
        Sql)

GET_TARGET_PROPERTY(QtCore_Location Qt5::Core LOCATION_${CMAKE_BUILD_TYPE})
GET_TARGET_PROPERTY(QtSql_Location Qt5::Sql LOCATION_${CMAKE_BUILD_TYPE})

SET(MYSQL_SUPPORT ON)

IF (MYSQL_SUPPORT)
    SET(MYSQL_VERSION 1.0)

    SET(MySQL_DIR "C:\\Program Files (x86)\\MySQL\\MySQL Connector C 6.1")

    FIND_PACKAGE(MySQL ${MYSQL_VERSION} REQUIRED)
    INCLUDE_DIRECTORIES(${MYSQL_INCLUDE_DIRS})
ENDIF()

ADD_SUBDIRECTORY(login)
ADD_SUBDIRECTORY(world)