CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(LoginServer)

SET(MSVC_BUILD OFF)

IF(WIN32)
	SET(MYSQL_RUNTIME "libmySQL.dll")
	IF(MSVC)
		SET(MSVC_BUILD ON)
		SET(MYSQL_LIB "libmysql")
	ELSE()
		SET(MYSQL_LIB "libmysql.lib")
	ENDIF()	
ENDIF()

CONFIGURE_FILE(
	"${PROJECT_SOURCE_DIR}/../include/config.h.in" 
		"${PROJECT_BINARY_DIR}/config.h"
)

INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")

ADD_EXECUTABLE(Login
	src/buffer.cpp
	src/logger.cpp
	src/login.cpp
	src/network.cpp
	src/PacketLogger.cpp
	src/reciever.cpp
	src/stringf.cpp
)


TARGET_LINK_LIBRARIES(Login
	ws2_32
	wsock32
	${PROJECT_SOURCE_DIR}/../lib/${MYSQL_LIB}
	Qt5::Core
	-static
)

SET(PROJECT_INSTALL_DIR ${PROJECT_BINARY_DIR}/../dist/${CMAKE_BUILD_TYPE})

INSTALL(TARGETS Login
		RUNTIME DESTINATION ${PROJECT_INSTALL_DIR}/bin)

INSTALL(FILES
		${PROJECT_SOURCE_DIR}/../dll/${MYSQL_RUNTIME}
		${QtCore_Location}
		${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS}
		DESTINATION ${PROJECT_INSTALL_DIR}/bin)